--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "description": "OmniBrowser: Electron + React + TypeScript + Vite multi-mode desktop browser",
-  "main": "electron/main.cjs",
+  "main": "dist-electron/main.js",
   "scripts": {
-    "dev": "concurrently -k -n VITE,ELECTRON -c green,blue \"vite --mode development\" \"cross-env NODE_ENV=development wait-on tcp:5173 && electron .\"",
-    "build:renderer": "vite build",
+    "dev": "vite",
+    "build": "vite build",
     "build:types": "tsc -b",
-    "build": "npm run build:types && npm run build:renderer && electron-builder",
+    "build:app": "npm run build && electron-builder",
+    "preview": "vite preview",
     "lint": "eslint .",
     "postinstall": "node ./scripts/postinstall.ts"
   },
@@ -65,6 +66,8 @@
     "tsx": "^4.19.0",
     "typescript": "^5.6.2",
     "vite": "^5.4.2",
+    "vite-plugin-electron": "^0.28.8",
+    "vite-plugin-electron-renderer": "^0.14.6",
     "wait-on": "^7.2.0"
   },
   "build": {
@@ -72,8 +75,7 @@
     "productName": "OmniBrowser",
     "files": [
       "dist/**",
-      "electron/**",
-      "public/**",
+      "dist-electron/**",
       "package.json"
     ],
     "directories": {
