--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "description": "OmniBrowser: Electron + React + TypeScript + Vite multi-mode desktop browser",
-  "main": "dist-electron/main.js",
+  "main": "electron/main.cjs",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently -k -n VITE,ELECTRON -c green,blue \"vite --mode development\" \"cross-env NODE_ENV=development VITE_DEV_SERVER_URL=http://localhost:5173 wait-on tcp:5173 && electron .\"",
     "build": "vite build",
     "build:types": "tsc -b",
     "build:app": "npm run build && electron-builder",
