--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "electron/main.cjs",
   "scripts": {
     "dev": "concurrently -k -n VITE,ELECTRON -c green,blue \"vite --mode development\" \"cross-env NODE_ENV=development VITE_DEV_SERVER_URL=http://localhost:5173 wait-on tcp:5173 && electron .\"",
+    "dev:full": "npm run dev",
     "build": "vite build",
     "build:types": "tsc -b",
     "build:app": "npm run build && electron-builder",
