Setup execution-grade project infrastructure: CI/CD, issue tracking, documentation
- Add GitHub Actions workflows (CI, Release, Tests)
- Create issue templates (bug, feature, task)
- Add PR template
- Create PROJECT_STATUS.md with accurate status tracking
- Create CHANGELOG.md with release notes
- Create ISSUES.md for roadmap tracking
- Create CONTRIBUTING.md guidelines
- Update README with CI badges and accurate status
- Update package.json version to 0.1.0-alpha
- Add test scripts placeholder
- Fix documentation references

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "omnibrowser",
-  "version": "0.1.0",
+  "version": "0.1.0-alpha",
   "private": true,
   "description": "OmniBrowser: Electron + React + TypeScript + Vite multi-mode desktop browser",
   "main": "electron/main.cjs",
