--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -1,4 +1,6 @@
 fastapi==0.104.1
+httpx==0.25.2
+psutil==5.9.6
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
 python-jose[cryptography]==3.3.0
@@ -7,4 +9,6 @@ websockets==12.0
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
 alembic==1.12.1
+passlib[bcrypt]==1.7.4
+redis==5.0.1
 
