--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "dist-electron/main.js",
   "scripts": {
     "dev": "cross-env JSDOM_NO_CANVAS=1 concurrently -k -n VITE,ELECTRON -c green,blue \"vite --mode development\" \"node scripts/start-electron-dev.cjs\"",
+    "dev:web": "cross-env JSDOM_NO_CANVAS=1 vite --mode development",
     "dev:full": "npm run dev",
     "build": "cross-env JSDOM_NO_CANVAS=1 vite build",
     "build:types": "tsc -b",
@@ -14,6 +15,7 @@
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 0",
     "test:e2e": "playwright test --config=playwright.config.ts",
+    "test:backend": "playwright test tests/e2e/backend-api.spec.ts --config=playwright.config.ts",
     "perf:test": "tsx scripts/perf/perf-audit.ts",
     "postinstall": "node ./scripts/postinstall.ts",
     "audit:prod": "npm audit --omit=dev",
@@ -22,6 +24,8 @@
   "dependencies": {
     "@cliqz/adblocker-electron": "^1.34.0",
     "@mozilla/readability": "^0.6.0",
+    "bufferutil": "file:stubs/bufferutil-stub",
+    "canvas": "file:stubs/canvas-stub",
     "date-fns": "^4.1.0",
     "dexie": "^4.0.8",
     "fast-xml-parser": "^4.5.0",
@@ -37,8 +41,8 @@
     "p-queue": "^8.0.1",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^4.8.69",
-    "playwright": "^1.48.0",
-    "playwright-core": "^1.48.0",
+    "playwright": "^1.56.1",
+    "playwright-core": "^1.56.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
@@ -47,8 +51,6 @@
     "tailwindcss": "^3.4.14",
     "tough-cookie": "^4.1.4",
     "ts-pattern": "^5.1.2",
-    "canvas": "file:stubs/canvas-stub",
-    "bufferutil": "file:stubs/bufferutil-stub",
     "utf-8-validate": "file:stubs/utf-8-validate-stub",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
@@ -57,15 +59,14 @@
     "better-sqlite3": "^9.6.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
+    "@playwright/test": "^1.56.1",
     "@types/jsdom": "^21.1.7",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "@eslint/js": "^9.10.0",
-    "eslint-plugin-react": "^7.37.1",
-    "typescript-eslint": "^8.7.0",
     "autoprefixer": "^10.4.20",
     "concurrently": "^9.0.1",
     "cross-env": "^7.0.3",
@@ -73,10 +74,12 @@
     "electron-builder": "^24.13.3",
     "esbuild": "^0.25.12",
     "eslint": "^9.11.1",
+    "eslint-plugin-react": "^7.37.1",
     "postcss": "^8.4.47",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.0",
     "typescript": "^5.6.2",
+    "typescript-eslint": "^8.7.0",
     "vite": "^7.2.2",
     "vite-plugin-electron": "^0.28.8",
     "vite-plugin-electron-renderer": "^0.14.6",
