ci: add dedicated PR workflow with typecheck, lint, and smoke tests
- create .github/workflows/pr.yml for fast PR feedback
- runs typecheck, lint, and Playwright smoke tests in parallel
- includes concurrency control to cancel in-progress runs
- add npm run test:smoke script for local smoke test runs
- uploads test artifacts on failure for debugging

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 0",
     "test:e2e": "playwright test --config=playwright.config.ts",
+    "test:smoke": "playwright test tests/e2e/electron-smoke.spec.ts --config=playwright.config.ts",
     "test:backend": "playwright test tests/e2e/backend-api.spec.ts --config=playwright.config.ts",
     "audit:lighthouse": "tsx scripts/lighthouse-audit.ts",
     "perf:test": "tsx scripts/perf/perf-audit.ts",
