--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "dist-electron/main.js",
   "scripts": {
     "dev": "cross-env JSDOM_NO_CANVAS=1 concurrently -k -n VITE,ELECTRON -c green,blue \"vite --mode development\" \"node scripts/start-electron-dev.cjs\"",
+    "dev:all": "node scripts/start-dev-all.cjs",
     "dev:web": "cross-env JSDOM_NO_CANVAS=1 vite --mode development",
     "dev:full": "npm run dev",
     "build": "cross-env JSDOM_NO_CANVAS=1 vite build",
@@ -26,6 +27,7 @@
   "dependencies": {
     "@cliqz/adblocker-electron": "^1.34.0",
     "@mozilla/readability": "^0.6.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "bufferutil": "file:stubs/bufferutil-stub",
     "canvas": "file:stubs/canvas-stub",
     "date-fns": "^4.1.0",
@@ -50,13 +52,15 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "robots-parser": "^3.0.1",
+    "reactflow": "^11.10.3",
     "shadcn-ui": "^0.9.4",
     "tailwindcss": "^3.4.14",
     "tough-cookie": "^4.1.4",
     "ts-pattern": "^5.1.2",
     "utf-8-validate": "file:stubs/utf-8-validate-stub",
     "zod": "^3.23.8",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "radix-ui": "^1.0.0"
   },
   "optionalDependencies": {
     "better-sqlite3": "^9.6.0"
