Add OpenAI and Hugging Face AI integration
- Add OpenAI client with embeddings and chat completion
- Add Hugging Face client with embeddings and chat
- Integrate OpenAI as primary AI backend (with fallback to Hugging Face/Ollama)
- Update Redix AI to use OpenAI  Hugging Face  Ollama priority
- Update multi-hop reasoning to support OpenAI
- Update SuperMemory embeddings to use OpenAI first
- Add comprehensive test suites for both integrations
- Add API routes for OpenAI and Hugging Face
- Update documentation with integration guides
- Configure API key placeholders in example.env (keys should be in local .env file)

--- a/example.env
+++ b/example.env
@@ -47,6 +47,17 @@ RAWG_API_KEY=
 REDIX_IDENTITY_API_URL=https://localhost:8443
 REDIX_IDENTITY_API_KEY=
 
+# --- OpenAI / ChatGPT (primary AI backend) ---
+OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_BASE_URL=https://api.openai.com/v1
+
+# --- Hugging Face AI (for local embeddings and chat) ---
+HUGGINGFACE_API_KEY=your_huggingface_api_key_here
+HUGGINGFACE_BASE_URL=https://router.huggingface.co/hf-inference
+
+# --- Ollama (local LLM fallback) ---
+OLLAMA_BASE_URL=http://localhost:11434
+
 # --- Knowledge Graph / Cloud Services ---
 KNOWLEDGE_GRAPH_API_URL=
 KNOWLEDGE_GRAPH_API_KEY=
