--- a/example.env
+++ b/example.env
@@ -30,11 +30,17 @@ FINNHUB_API_KEY=
 
 # --- Research / Search APIs ---
 BRAVE_API_KEY=
+BING_API_KEY=your_bing_api_key_here
 TAVILY_API_KEY=
 FIRECRAWL_API_KEY=
 FIRECRAWL_BASE_URL=https://api.firecrawl.dev
 FIRECRAWL_WEBHOOK_SECRET=
 ZYTE_API_KEY=
+
+# Search Proxy Server (runs on port 3001 by default)
+SEARCH_PROXY_PORT=3001
+SEARCH_PROXY_HOST=0.0.0.0
+VITE_SEARCH_PROXY_URL=http://localhost:3001
 
 # --- Gaming Integrations ---
 CRAZY_GAMES_TOKEN=
