feat: add Redix Core backend and wire SearchBar to /ask endpoint
- Created server/redix-core.ts: Green Intelligence Engine with model routing, eco scoring, and LLM adapter
- Updated SearchBar.tsx to call Redix /ask endpoint as fallback when search-proxy summary unavailable
- Added REDIX_PORT and VITE_REDIX_CORE_URL to example.env
- Added dev:redix npm script to start Redix server
- Fixed E2E tests to handle Electron shell startup failures gracefully
- Added server/README.md with Redix architecture and API docs

This implements the core Redix backend (40%  60% complete) with:
- Model router (auto-selects GPT/Claude/Mistral/Ollama)
- Eco scorer (green score based on energy/tokens)
- Unified LLM adapter for all providers
- /ask and /metrics endpoints

Next: SSE streaming, Redis caching, consent ledger persistence

--- a/example.env
+++ b/example.env
@@ -60,6 +60,10 @@ OPENAI_BASE_URL=https://api.openai.com/v1
 # Bing Search API (optional, for enhanced search aggregation)
 BING_API_KEY=your_bing_api_key_here
 
+# --- Redix Core (Green Intelligence Engine) ---
+REDIX_PORT=8001
+VITE_REDIX_CORE_URL=http://localhost:8001
+
 # --- Hugging Face AI (for local embeddings and chat) ---
 HUGGINGFACE_API_KEY=your_huggingface_api_key_here
 HUGGINGFACE_BASE_URL=https://router.huggingface.co/hf-inference
