--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "test:e2e": "playwright test --config=playwright.config.ts",
     "test:smoke": "playwright test tests/e2e/electron-smoke.spec.ts --config=playwright.config.ts",
     "test:backend": "playwright test tests/e2e/backend-api.spec.ts --config=playwright.config.ts",
+    "dev:redix": "tsx server/redix-core.ts",
     "audit:lighthouse": "tsx scripts/lighthouse-audit.ts",
     "perf:test": "tsx scripts/perf/perf-audit.ts",
     "postinstall": "node ./scripts/postinstall.ts",
