--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "better-sqlite3": "^9.6.0"
   },
   "devDependencies": {
+    "@axe-core/react": "^4.11.0",
     "@eslint/js": "^9.10.0",
     "@playwright/test": "^1.56.1",
     "@types/jsdom": "^21.1.7",
@@ -100,6 +101,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
+    "axe-core": "^4.11.0",
     "concurrently": "^9.0.1",
     "cross-env": "^7.0.3",
     "electron": "^39.1.1",
