feat: Phase 3 Monitoring - privacy-friendly analytics
- add diagnostics.analyticsOptIn setting and renderer toggle
- introduce electron analytics service with opt-in events and endpoint config
- wire IPC helpers plus renderer analytics client for page views/events
- sync analytics opt-in during onboarding and startup; track initial page view
- document env vars and status updates for Phase 3 analytics

--- a/example.env
+++ b/example.env
@@ -88,3 +88,6 @@ SENTRY_DSN=
 SENTRY_TRACES_SAMPLE_RATE=0.0
 VITE_SENTRY_DSN=
 VITE_SENTRY_TRACES_SAMPLE_RATE=0.0
+ANALYTICS_ENDPOINT=https://analytics.example.com/api/events
+ANALYTICS_SITE_ID=omnibrowser-app
+ANALYTICS_PUBLIC_KEY=
