fix: resolve TypeScript errors and CI pipeline failures
- Fix stopImmediatePropagation() type errors in all components (17 files)
- Fix missing function references in Trade Mode (handlePlaceOrder, handleCloseAllPositions)
- Fix import type error in system-status.ts for workflow-orchestrator
- Fix onboarding and Terms of Service button click issues
- All TypeScript compilation errors resolved (136  0)
- All builds passing locally
- Improve event handling with proper type casting for React synthetic events

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test:api-health": "node scripts/test-api-health.js",
     "dev:api": "python -m uvicorn apps.api.main:app --reload --port 8000",
     "dev:engine": "cd packages/omni-engine && npm run dev",
-    "dev": "cross-env JSDOM_NO_CANVAS=1 concurrently -k -n VITE,ELECTRON,ENGINE -c green,blue,yellow \"vite --mode development\" \"node scripts/start-electron-dev.cjs\" \"node scripts/start-engine.js\"",
+    "dev": "node scripts/start-dev-all.cjs",
+    "dev:basic": "cross-env JSDOM_NO_CANVAS=1 concurrently -n VITE,ELECTRON,ENGINE -c green,blue,yellow \"vite --mode development\" \"node scripts/start-electron-dev.cjs\" \"node scripts/start-engine.js\"",
     "dev:all": "node scripts/start-dev-all.cjs",
     "dev:web": "cross-env JSDOM_NO_CANVAS=1 vite --mode development",
     "dev:full": "npm run dev",
@@ -38,6 +39,8 @@
     "postinstall": "node ./scripts/postinstall.ts",
     "build:lunr": "node scripts/build-lunr.js",
     "dev:fast": "cross-env JSDOM_NO_CANVAS=1 OB_DISABLE_HEAVY_SERVICES=1 vite --mode development",
+    "clean": "node scripts/clean-cache.js",
+    "clean:all": "npm run clean && rimraf node_modules && npm install",
     "audit:prod": "npm audit --omit=dev",
     "ci:check": "npm run build:types && npm run lint && npm run audit:prod && npm run perf:test",
     "scraper:worker": "node server/services/queue/worker.js",
