--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dev:fast": "cross-env JSDOM_NO_CANVAS=1 OB_DISABLE_HEAVY_SERVICES=1 vite --mode development",
     "clean": "node scripts/clean-cache.js",
     "clean:all": "npm run clean && rimraf node_modules && npm install",
+    "kill:dev": "node scripts/kill-dev-processes.js",
     "audit:prod": "npm audit --omit=dev",
     "ci:check": "npm run build:types && npm run lint && npm run audit:prod && npm run perf:test",
     "scraper:worker": "node server/services/queue/worker.js",
