feat: migrate to react-hot-toast for better UX
- Replace custom toast store with react-hot-toast
- Update toast utility to use react-hot-toast API
- Replace ToastHost with react-hot-toast Toaster component
- Maintain backward compatibility with existing toast() calls
- Add support for loading states and promise-based toasts
- Better animations, positioning, and styling

Fixes: UI/UX quick win - react-hot-toast integration

--- a/.gitignore
+++ b/.gitignore
@@ -73,10 +73,11 @@ tmp/
 # Documentation (implementation notes)
 *_IMPLEMENTATION*.md
 *_ROADMAP*.md
-*_STATUS*.md
 *_COMPLETE*.md
 FILES_STRUCTURE.md
 PRIVACY_STACK_IMPLEMENTATION.md
+# Allow PROJECT_STATUS.md (official project status)
+!PROJECT_STATUS.md
 
 perf/*.json
 
