feat: integrate Bhashini API for 22 Indic languages
- Create bhashiniService.ts with translation, TTS, and STT support
- Add support for all 22 Indic languages (Assamese, Bengali, Bodo, Dogri, Konkani, Gujarati, Hindi, Kannada, Kashmiri, Maithili, Malayalam, Manipuri, Marathi, Nepali, Odia, Punjabi, Sanskrit, Santali, Sindhi, Tamil, Telugu, Urdu)
- Integrate Bhashini translation into offline translator with automatic fallback
- Update language mappings in search.ts and translator.ts to include all 22 Indic languages
- Add BHASHINI_API_KEY to example.env

Bhashini API features:
- Translation between Indic languages and English
- Text-to-Speech (TTS) for Indic languages
- Speech-to-Text (STT) for Indic languages
- Automatic language detection and normalization
- Graceful fallback to offline translation when API unavailable

Language support:
- 22 Indic languages fully supported via Bhashini
- Automatic detection of Indic language pairs
- High confidence translations (0.95) for Bhashini results
- Maintains backward compatibility with existing translation system

Fixes: Critical - Multilingual: Integrate Bhashini API for 22 Indic languages

--- a/example.env
+++ b/example.env
@@ -42,6 +42,11 @@ FIRECRAWL_BASE_URL=https://api.firecrawl.dev
 FIRECRAWL_WEBHOOK_SECRET=
 ZYTE_API_KEY=
 
+# --- Multilingual / Translation APIs ---
+# Bhashini API for 22 Indic languages (translation, TTS, STT)
+# Get API key from: https://bhashini.gov.in/
+BHASHINI_API_KEY=your_bhashini_api_key_here
+
 # Search Proxy Server (runs on port 3001 by default)
 SEARCH_PROXY_PORT=3001
 SEARCH_PROXY_HOST=0.0.0.0
