feat: add Android APK build scripts and complete offline summarization integration
- Add Android build scripts to package.json
- Create build-android.md with detailed build instructions
- Complete offline mBART summarization integration in Research mode
- Add fallback to offline summarization when AI unavailable offline

Android build scripts:
- build:android - Full build (web + APK)
- build:android:apk - Build APK only
- build:android:setup - Initial Capacitor setup

Offline summarization integration:
- Auto-detects offline mode
- Falls back to offline summarization when AI unavailable
- Collects source texts from scraped snapshots and aggregated sources
- Generates summaries in user's preferred language
- Uses mBART model when available, extraction fallback otherwise

Day 5 milestone: Offline/Testing + Launch - Complete
-  Offline mBART summaries for Research mode
-  Playwright tests for 5 languages (Hindi, Tamil, Bengali, Telugu, Marathi)
-  Android APK build scripts and documentation

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "build:app": "cd tauri-migration && npm run tauri build",
     "build:windows": "npm run build && cd tauri-migration && npm run tauri:build -- --target x86_64-pc-windows-msvc",
     "build:windows:installer": "npm run build && cd tauri-migration && npm run tauri:build -- --bundles msi",
+    "build:android": "npm run build && npm run build:android:apk",
+    "build:android:apk": "cd android && ./gradlew assembleRelease",
+    "build:android:setup": "npm run build && npx cap add android && npx cap sync android",
     "preview": "vite preview",
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 0",
