fix(ci): add comprehensive build error handling and diagnostics
- Capture build output to file for debugging
- Add environment variable logging
- Show last 50 lines of output on failure
- Better error reporting for CI debugging

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,27 @@ jobs:
         run: npm ci --legacy-peer-deps
 
       - name: Build application
-        run: npm run build
+        run: |
+          echo "Starting build in CI environment..."
+          echo "Node version: $(node --version)"
+          echo "NPM version: $(npm --version)"
+          echo "Current directory: $(pwd)"
+          echo "Environment: NODE_ENV=${NODE_ENV:-not set}, CI=${CI:-not set}"
+
+          # Set environment variables
+          export NODE_ENV=production
+          export CI=true
+
+          # Run build and capture output
+          npm run build 2>&1 | tee build-output.txt || {
+            BUILD_EXIT_CODE=${PIPESTATUS[0]}
+            echo "❌ Build failed with exit code $BUILD_EXIT_CODE"
+            echo "Last 50 lines of build output:"
+            tail -50 build-output.txt
+            exit $BUILD_EXIT_CODE
+          }
+
+          echo "✅ Build completed successfully"
         env:
           NODE_ENV: production
           CI: true
