--- a/tauri-migration/src-tauri/Cargo.toml
+++ b/tauri-migration/src-tauri/Cargo.toml
@@ -13,10 +13,10 @@ edition = "2021"
 tauri-build = { version = "2.5.2", features = [] }
 
 [dependencies]
-tauri = { version = "2.5.2", features = ["shell-open"] }
+tauri = { version = "2.5.2", features = [] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
 thiserror = "1"
 
 [features]
