feat: Add WISPR AI agent with voice commands + one-click installer
- Implemented WISPR floating orb with Ctrl+Space global hotkey
- Added Hindi/English voice recognition with Web Speech API
- Created command parser for trade, research, search, summarize, explain, fill_form, screenshot
- Built screenshot analyzer with GPT-4 Vision support
- Added form auto-fill system with profile management
- Created one-click installer with Ollama auto-download
- Added beautiful progress modal for model downloads
- Integrated first-launch detection and setup flow
- Fixed all TypeScript errors and lint warnings

Features:
- Voice commands: 'Nifty kharido 50', 'Research Tesla', 'Fill kar', etc.
- Screenshot analysis: 'Yeh chart ka analysis kar'
- Form auto-fill with saved profiles
- Auto-installer downloads Ollama + models on first launch
- Works 100% offline after initial setup

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "build:app": "cd tauri-migration && npm run tauri build",
     "build:windows": "npm run build && cd tauri-migration && npm run tauri:build -- --target x86_64-pc-windows-msvc",
     "build:windows:installer": "npm run build && cd tauri-migration && npm run tauri:build -- --bundles msi",
+    "build:installer": "node scripts/build-installer-with-ollama.js",
     "build:android": "npm run build && npm run build:android:apk",
     "build:android:apk": "cd android && ./gradlew assembleRelease",
     "build:android:setup": "npm run build && npx cap add android && npx cap sync android",
@@ -31,6 +32,7 @@
     "lint": "eslint .",
     "test": "vitest run",
     "test:unit": "vitest run",
+    "pretest:unit": "node scripts/ensure-single-react.js",
     "test:unit:watch": "vitest",
     "test:unit:ui": "vitest --ui",
     "test:unit:coverage": "vitest run --coverage",
@@ -150,6 +152,7 @@
     "esbuild": "^0.25.12",
     "eslint": "^9.11.1",
     "eslint-plugin-react": "^7.37.1",
+    "fake-indexeddb": "^6.2.5",
     "http-server": "^14.1.1",
     "husky": "^9.1.7",
     "jscodeshift": "^0.15.1",
@@ -158,6 +161,7 @@
     "postcss": "^8.4.47",
     "prettier": "^3.6.2",
     "semantic-release": "^25.0.2",
+    "storybook": "^8.6.14",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.0",
     "typescript": "^5.6.2",
