--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,7 +54,7 @@ jobs:
         if: matrix.platform == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
+          sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf libgtk-3-dev
 
       - name: Install system dependencies (macOS)
         if: matrix.platform == 'macos-latest'
@@ -67,6 +67,11 @@ jobs:
       - name: Build frontend
         run: npm run build
 
+      - name: Install Ollama (for testing)
+        if: matrix.platform == 'ubuntu-latest'
+        run: |
+          curl -fsSL https://ollama.com/install.sh | sh || true
+
       - name: Build Tauri app
         working-directory: tauri-migration
         env:
@@ -74,7 +79,7 @@ jobs:
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         run: |
           npm install
-          npm run tauri build -- --target ${{ matrix.target }}
+          npm run tauri build -- --target ${{ matrix.target }} --bundles ${{ matrix.bundle }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
