--- a/tauri-migration/src-tauri/Cargo.toml
+++ b/tauri-migration/src-tauri/Cargo.toml
@@ -18,6 +18,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
 thiserror = "1"
+reqwest = { version = "0.12", features = ["json"] }
 
 [features]
 # This feature is used for production builds or when `devPath` points to the filesystem
