--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "build:windows": "npm run build && cd tauri-migration && npm run tauri:build -- --target x86_64-pc-windows-msvc",
     "build:windows:installer": "npm run build && cd tauri-migration && npm run tauri:build -- --bundles msi",
     "build:installer": "node scripts/build-installer-with-ollama.js",
+    "setup:playwright": "node scripts/setup-playwright.js",
     "build:android": "npm run build && npm run build:android:apk",
     "build:android:apk": "cd android && ./gradlew assembleRelease",
     "build:android:setup": "npm run build && npx cap add android && npx cap sync android",
