--- a/tauri-migration/src-tauri/Cargo.toml
+++ b/tauri-migration/src-tauri/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = "1"
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
 thiserror = "1"
 reqwest = { version = "0.12", features = ["json"] }
+tauri-plugin-global-shortcut = "2.0"
 
 [features]
 # This feature is used for production builds or when `devPath` points to the filesystem
